Fixed design causing overlap due to the opening times

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,20 +346,11 @@ p.menu-list__item-desc+span.dots {
 #opening-header {
     color: #657383;
     text-align: center;
-    width: 100%;
-    padding-right: 50%; 
-    position: absolute;
-    padding-top: 5%;
-
 }
 
 #opening-header_menu {
     color: #657383;
     text-align: center;
-    width: 100%;
-    padding-right: 50%; 
-    position: absolute;
-    padding-top: 5%;
 }
 
 .restaurant { 
@@ -368,7 +359,6 @@ p.menu-list__item-desc+span.dots {
     color:#657383;
     display: inline-block;
     text-align: left;
-    padding-top: 10%;
 }
 
 .terrace {
@@ -377,7 +367,6 @@ p.menu-list__item-desc+span.dots {
     color:#657383;
     display: inline-block;
     text-align: center;
-    padding-top: 10%;
 }
 
 .garden {
@@ -386,7 +375,6 @@ p.menu-list__item-desc+span.dots {
     color:#657383;
     display: inline-block;
     text-align: right;
-    padding-top: 10%;
 }
 
 .restaurant table {
